Improve mobile layout for join us

--- a/join-us/index.html
+++ b/join-us/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main id="main">
-        <h1>Join us</h1>
+        <h2>Join our socials</h2>
         <div class="joinbox">
             <div class="joinbtn discord">
                 <a href="https://discord.gg/6MgXKTgSTW" target="_blank">
@@ -36,8 +36,9 @@
             </div>
         </div>
         <div class="signup-form">
-            <iframe src="https://forms.office.com/r/ksq5VkZyEP?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; width:100%; height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+            <h2>Sign up for a membership</h2>
             <a href="https://forms.office.com/r/ksq5VkZyEP" target="_blank">Open form in new tab</a>
+            <iframe src="https://forms.office.com/r/ksq5VkZyEP?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; width:100%; height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
         </div>
     </main>
     <footer>
